# IGP-local

./: .env.example  .gitignore  AGENTS.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PRODUCT.md  PROJECT_PLAN.md  README.md  manage.py  pyproject.toml
accounts/: adapters.py  admin.py  documents.py  forms.py  importers.py  models.py  policies.py  tests.py  validators.py  views.py
accounts/docx_templates/: igp-meeting-template.docx  igp-template.docx
accounts/migrations/: 0001_initial.py  0002_schoolsetting_student_alter_user_options_and_more.py  0003_programdocument.py  0004_awardrecord_initialigpprofile.py  0005_teacher_alter_studentstaffassignment_staff.py  0006_remove_teacher_role.py  0007_student_has_multiple_special_education_needs.py  0008_remove_initialigpprofile_has_multiple_special_education_needs.py  0009_courseplan_assessment_igpplan_interest_and_more.py  0010_studentstaffassignment_one_current_case_manager_per_student.py  0011_courseplan_affective_support_and_more.py  0012_move_strengths_to_annual_plans.py  0013_semesterplan_learning_domains_and_more.py  0014_alter_learningperformance_description_and_more.py  0015_courseplan_is_active.py  0016_course_plan_templates.py  0017_populate_course_plan_templates.py  0018_phase3_counseling_audit.py  0019_counseling_record_fields.py  0020_programdocument_student_and_more.py  0021_igpplan_affective_analysis_igpplan_strength_language_and_more.py
igp_project/: asgi.py  urls.py  wsgi.py
import_templates/: 學生基礎資料-test.xlsx  學生基礎資料匯入範本.xlsx  平興國中IGP113版_去識別化測試匯入.xlsx
scripts/: convert_docx_to_pdf.ps1
(+29 files in other folders)
