[project]
name = "igp-local"
version = "0.1.0"
description = "Local-first IGP writing and management system"
requires-python = ">=3.13,<3.14"
dependencies = [
    "Django~=5.2.0",
    "django-allauth[socialaccount]>=65.18.0",
    "docx-mailmerge2>=1.0.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
]

[tool.uv]
package = false
